(fix) Se añadió z-index a dropdown-content

--- a/frontend/estatico/componentes.css
+++ b/frontend/estatico/componentes.css
@@ -43,7 +43,7 @@ label.btn {
 }
 
 .dropdown-content {
-  @apply col gap-2 p-2 rounded-box shadow-lg bg-base border border-base will-change-[opacity,transform] data-[side=bottom]:animate-[slideUpAndFade_150ms] data-[side=left]:animate-[slideRightAndFade_150ms] data-[side=right]:animate-[slideLeftAndFade_150ms] data-[side=top]:animate-[slideDownAndFade_150ms]
+  @apply z-2 col gap-2 p-2 rounded-box shadow-lg bg-base border border-base will-change-[opacity,transform] data-[side=bottom]:animate-[slideUpAndFade_150ms] data-[side=left]:animate-[slideRightAndFade_150ms] data-[side=right]:animate-[slideLeftAndFade_150ms] data-[side=top]:animate-[slideDownAndFade_150ms]
 }
 
 .dropdown-item,
